--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Idriss Jairi"
   avatar           : "jairiidriss.jpg"
   bio              : "PhD student in Machine Learning | Data Scientist and Software Engineer"
-  location         : "Location"
+  location         : 
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=KEb8hGMAAAAJ&hl=en&authuser=1"
