--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Idriss Jairi"
-  avatar           : "jairiidriss.jpg"
+  avatar           : "idriss-jairi.jpg"
   bio              : "PhD student in Machine Learning | Data Scientist and Software Engineer"
   location         : 
   employer         :
